ajout liaison base de donnée et modification affichage

--- a/src/pages/accueil/accueil.scss
+++ b/src/pages/accueil/accueil.scss
@@ -12,3 +12,8 @@ ion-card-header {
 ion-card-content {
   padding: 10px !important;
 }
+
+.check-article {
+  text-decoration: line-through;
+  color: #777;
+}
